# Kanonly-app-public

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.jsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs  schema.rs
src/components/: BoardView.jsx  BoardsView.jsx  Column.jsx  ConfirmModal.jsx  CreateBoardModal.jsx  CreateColumnModal.jsx  CreateNoteModal.jsx  CreateTicketModal.jsx  EmojiPicker.jsx  HomeView.jsx  MarkdownEditor.jsx  MarkdownPreview.jsx  NoteDetail.jsx  NotesView.jsx  RichTextEditor.jsx  Sidebar.jsx  SplashScreen.jsx  TicketCard.jsx  TicketDetail.jsx
src/components/ui/: Button.jsx  Input.jsx  Modal.jsx
src/hooks/: useUpdateCheck.js
src/i18n/: index.js  translations.js
src/lib/: htmlHelpers.js
src/store/: boardStore.js  licenseStore.js  persistence.js
src/types/: index.js
